[package]
name = "gmbm"
version = "0.5.2"
edition = "2024"
description = "Write Garry's Mod Binary Modules in Rust"
authors = ["b0mbie"]
license = "MIT"

[[example]]
name = "bits"
crate-type = ["cdylib"]

[[example]]
name = "hello"
crate-type = ["cdylib"]

[[example]]
name = "multirealm"
crate-type = ["cdylib"]

[[example]]
name = "user_types"
crate-type = ["cdylib"]

[features]
default = ["user-types"]
user-types = []

[dependencies.cpp-class]
git = "https://github.com/b0mbie/cpp-class.git"
version = "0.1.0"
