[package]
name = "gmbm"
version = "0.5.3"
edition = "2024"
description = "Write Garry's Mod Binary Modules in Rust"
authors = ["b0mbie"]
license = "MIT"

[[example]]
name = "bits"
crate-type = ["cdylib"]

[[example]]
name = "hello"
crate-type = ["cdylib"]

[[example]]
name = "multirealm"
crate-type = ["cdylib"]

[[example]]
name = "user_types"
crate-type = ["cdylib"]

[features]
default = ["user-types", "rse-math"]
# Include UserType support.
user-types = []
# Use `Vector` and `QAngle` definitions provided by the `rse-math` crate.
rse-math = ["dep:rse-math"]

[dependencies.cpp-class]
git = "https://github.com/b0mbie/cpp-class.git"
version = "0.1.1"

[dependencies.rse-math]
git = "https://github.com/b0mbie/rust-source-engine.git"
version = "0.1.0"
optional = true
